--- a/detail.html
+++ b/detail.html
@@ -173,7 +173,7 @@
                                     class="data-icon data-icon-arrows icon-arrows-hamburger-2 icon-pushmenu js-push-menu"></i>
                             </div>
                             <div class="clearfix logo">
-                                <a href="#"><img alt="Logo" src="img/logo.png" /></a>
+                                <a href="index.html"><img alt="Logo" src="img/logo.png" /></a>
                             </div>
                         </div>
                     </div>
