--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@
                                     </div>
                                     <div class="clearfix menu-title-box bold uppercase">
                                         <ul>
-                                            <li><a onclick="showBoxCateHomeByID('#Kursi Kayu','.good-deal-product')"
+                                            <li><a onclick="showBoxCateHomeByID('#mobile-tablet','.good-deal-product')"
                                                     href="javascript:;">Sofa Minimalis</a></li>
-                                            <li><a onclick="showBoxCateHomeByID('#Sofa','.good-deal-product')"
-                                                    href="javascript:;">Sofa Classic</a></li>
-                                            <li><a onclick="showBoxCateHomeByID('#Lemari','.good-deal-product')"
+                                            <li><a onclick="showBoxCateHomeByID('#food','.good-deal-product')"
+                                                    href="javascript:;">Sofa Vintage</a></li>
+                                            <li><a onclick="showBoxCateHomeByID('#home-life','.good-deal-product')"
                                                     href="javascript:;">Sofa Retro</a></li>
-                                            <li><a onclick="showBoxCateHomeByID('#Spring Bed & Busa','.good-deal-product')"
+                                            <li><a onclick="showBoxCateHomeByID('#auto-moto','.good-deal-product')"
                                                     href="javascript:;">Sofa jaguar</a></li>
                                         </ul>
                                     </div>
@@ -377,7 +377,8 @@
                                                     </div>
                                                     <p
                                                         class="title-product clearfix full-width title-hover-black animate-default">
-                                                        <a class="animate-default" href="detail.html">Sofa Retro (Bahan
+                                                        <a class="animate-default" href="detail.html">Sofa Minimalis
+                                                            (Bahan
                                                             Rivoli)</a>
                                                     </p>
                                                     <p class="clearfix price-product"><span
@@ -451,7 +452,7 @@
                                                 <!-- End Product Son -->
                                             </div>
                                         </div>
-                                        <div class="good-deal-product animate-default hidden-content-box" id="Sofa">
+                                        <div class="good-deal-product animate-default hidden-content-box" id="food">
                                             <!-- Product Son -->
                                             <div class="owl-carousel owl-theme">
                                                 <div class=" product-son ">
@@ -593,7 +594,7 @@
                                                 <div class=" product-son ">
                                                     <div class="clearfix image-product relative animate-default">
                                                         <div class="center-vertical-image">
-                                                            <img src="img/product_home_13-min.png"
+                                                            <img src="img/img_product_category_7-min.png"
                                                                 alt="Product . . ." />
                                                         </div>
                                                         <ul class="option-product animate-default">
@@ -625,7 +626,7 @@
                                                 <div class=" product-son ">
                                                     <div class="clearfix image-product relative animate-default">
                                                         <div class="center-vertical-image">
-                                                            <img src="img/product_home_14-min.png"
+                                                            <img src="img/img_product_category_6-min.png"
                                                                 alt="Product . . ." />
                                                         </div>
                                                         <ul class="option-product animate-default">
@@ -657,7 +658,8 @@
                                                 <div class="clearfix product-son ">
                                                     <div class="clearfix image-product relative animate-default">
                                                         <div class="center-vertical-image">
-                                                            <img src="img/product_home_6-min.png" alt="Product . . ." />
+                                                            <img src="img/product_home_16-min.png"
+                                                                alt="Product . . ." />
                                                         </div>
                                                         <ul class="option-product animate-default">
                                                             <li class="relative"><a href="#"><i
@@ -689,7 +691,8 @@
                                                 <div class="clearfix product-son ">
                                                     <div class="clearfix image-product relative animate-default">
                                                         <div class="center-vertical-image">
-                                                            <img src="img/product_home_7-min.png" alt="Product . . ." />
+                                                            <img src="img/img_product_category_5-min.png"
+                                                                alt="Product . . ." />
                                                         </div>
                                                         <ul class="option-product animate-default">
                                                             <li class="relative"><a href="#"><i
@@ -887,7 +890,8 @@
                                                     </div>
                                                     <p
                                                         class="title-product clearfix full-width title-hover-black animate-default">
-                                                        <a class="animate-default" href="#">Te eam iisque deseruisse</a>
+                                                        <a class="animate-default" href="#">Te eam iisque
+                                                            deseruissee</a>
                                                     </p>
                                                     <p class="clearfix price-product"><span
                                                             class="price-old">$700</span>
@@ -1015,7 +1019,7 @@
                                                 onclick="showBoxCateHomeByID('#confectionery','.box-food-content')">Minimalis</a>
                                         </li>
                                         <li><a href="javascript:;"
-                                                onclick="showBoxCateHomeByID('#milk-cream','.box-food-content')">Classic</a>
+                                                onclick="showBoxCateHomeByID('#milk-cream','.box-food-content')">Vintage</a>
                                         </li>
                                         <li><a href="javascript:;"
                                                 onclick="showBoxCateHomeByID('#dry-food','.box-food-content')">Retro</a>
@@ -1055,7 +1059,7 @@
                                             </div>
                                             <div class="clearfix absolute name-product-no-ranking">
                                                 <p class="title-product clearfix full-width title-hover-black"><a
-                                                        href="#">Sofa Retro (Bahan Rivoli kuning)</a></p>
+                                                        href="#">Sofa Vintage (Bahan Rivoli kuning)</a></p>
                                                 <p class="clearfix price-product"><span class="price-old">Rp.2500</span>
                                                     Rp.2.000
                                                 </p>
@@ -1069,7 +1073,7 @@
                                             </div>
                                             <div class="clearfix absolute name-product-no-ranking">
                                                 <p class="title-product clearfix full-width title-hover-black"><a
-                                                        href="#">Sofa Retro (Bahan Rivoli hitam)</a></p>
+                                                        href="#">Sofa Vintage (Bahan Rivoli hitam)</a></p>
                                                 <p class="clearfix price-product"><span
                                                         class="price-old">Rp.2.500</span>
                                                     Rp2.000
@@ -1084,7 +1088,7 @@
                                             </div>
                                             <div class="clearfix absolute name-product-no-ranking">
                                                 <p class="title-product clearfix full-width title-hover-black"><a
-                                                        href="#">Sofa Classic (Bahan Rivoli Abu-abu</a></p>
+                                                        href="#">Sofa Vintage (Bahan Rivoli Abu-abu</a></p>
                                                 <p class="clearfix price-product"><span
                                                         class="price-old">Rp.3.000</span>
                                                     Rp.2.500
@@ -1099,7 +1103,7 @@
                                             </div>
                                             <div class="clearfix absolute name-product-no-ranking">
                                                 <p class="title-product clearfix full-width title-hover-black"><a
-                                                        href="#">Sofa Classic (Bahan Rivoli Kuning)</a></p>
+                                                        href="#">Sofa Vintage (Bahan Rivoli Kuning)</a></p>
                                                 <p class="clearfix price-product"><span
                                                         class="price-old">Rp.3.200</span>
                                                     Rp.2.600
